[package]
name = "rustls-provider"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
publish = false

[dependencies]
# Remove the `provider-tls-default` feature and add `provider-tls-rustls`
s2n-quic = { version = "1", path = "../../quic/s2n-quic", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] , package = "aranya-internal-s2n-quic" }
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["."]
