[package]
name = "unreliable-datagram"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
s2n-quic = { version = "1", path = "../../quic/s2n-quic", features = ["unstable-provider-datagram"], package = "aranya-internal-s2n-quic" }
s2n-quic-core = { path = "../../quic/s2n-quic-core" }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }

[workspace]
members = ["."]
